CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(Boost)

SET(CMAKE_PREFIX_PATH $ENV{BOOSTSYS})
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread filesystem chrono)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

# 无锁队列和堆
ADD_SUBDIRECTORY(lock_free)

#
ADD_SUBDIRECTORY(asio)

# 动态加载
ADD_SUBDIRECTORY(dll)

# 仿函数
ADD_SUBDIRECTORY(function)